--- a/Breaker/OptionsForm.resx
+++ b/Breaker/OptionsForm.resx
@@ -10618,34 +10618,34 @@
   <data name="&gt;&gt;radOnLockPause.ZOrder" xml:space="preserve">
     <value>23</value>
   </data>
-  <data name="OnLockReset.AutoSize" type="System.Boolean, mscorlib">
+  <data name="radOnLockReset.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="OnLockReset.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="radOnLockReset.Location" type="System.Drawing.Point, System.Drawing">
     <value>257, 237</value>
   </data>
-  <data name="OnLockReset.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="radOnLockReset.Size" type="System.Drawing.Size, System.Drawing">
     <value>116, 17</value>
   </data>
-  <data name="OnLockReset.TabIndex" type="System.Int32, mscorlib">
+  <data name="radOnLockReset.TabIndex" type="System.Int32, mscorlib">
     <value>30</value>
   </data>
-  <data name="OnLockReset.Text" xml:space="preserve">
+  <data name="radOnLockReset.Text" xml:space="preserve">
     <value>Reset the Timer</value>
   </data>
-  <data name="OnLockReset.ToolTip" xml:space="preserve">
+  <data name="radOnLockReset.ToolTip" xml:space="preserve">
     <value>This option will force the timer to restart when the system is unlocked.</value>
   </data>
-  <data name="&gt;&gt;OnLockReset.Name" xml:space="preserve">
-    <value>OnLockReset</value>
+  <data name="&gt;&gt;radOnLockReset.Name" xml:space="preserve">
+    <value>radOnLockReset</value>
   </data>
-  <data name="&gt;&gt;OnLockReset.Type" xml:space="preserve">
+  <data name="&gt;&gt;radOnLockReset.Type" xml:space="preserve">
     <value>System.Windows.Forms.RadioButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;OnLockReset.Parent" xml:space="preserve">
+  <data name="&gt;&gt;radOnLockReset.Parent" xml:space="preserve">
     <value>TableLayoutPanel1</value>
   </data>
-  <data name="&gt;&gt;OnLockReset.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;radOnLockReset.ZOrder" xml:space="preserve">
     <value>24</value>
   </data>
   <data name="TableLayoutPanel1.Location" type="System.Drawing.Point, System.Drawing">
@@ -10673,7 +10673,7 @@
     <value>1</value>
   </data>
   <data name="TableLayoutPanel1.LayoutSettings" type="System.Windows.Forms.TableLayoutSettings, System.Windows.Forms">
-    <value>&lt;?xml version="1.0" encoding="utf-16"?&gt;&lt;TableLayoutSettings&gt;&lt;Controls&gt;&lt;Control Name="lblOnSessionLock" Row="7" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="chkRunAtStartup" Row="0" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="chkShowOptionsOnLaunch" Row="1" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="lblWorkTime" Row="2" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="nudWorkTime" Row="2" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="lblBreakTime" Row="2" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="lnkFont" Row="6" RowSpan="1" Column="1" ColumnSpan="2" /&gt;&lt;Control Name="chkBeepOnBreakEnd" Row="1" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="lblFontLabel" Row="6" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="nudBreakTime" Row="2" RowSpan="1" Column="3" ColumnSpan="1" /&gt;&lt;Control Name="picForeColor" Row="5" RowSpan="1" Column="3" ColumnSpan="1" /&gt;&lt;Control Name="lblBackgroundColor" Row="5" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="lblBreakDelay" Row="3" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="nudOpacity" Row="4" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="lblOpacity" Row="4" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="lblMessage" Row="4" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="nudBreakDelay" Row="3" RowSpan="1" Column="3" ColumnSpan="1" /&gt;&lt;Control Name="chkWarningTime" Row="3" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="nudWarningTime" Row="3" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="txtMessage" Row="4" RowSpan="1" Column="3" ColumnSpan="1" /&gt;&lt;Control Name="picBackColor" Row="5" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="lblForegroundColor" Row="5" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="radOnLockDoNothing" Row="7" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="radOnLockPause" Row="8" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="OnLockReset" Row="9" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;/Controls&gt;&lt;Columns Styles="AutoSize,0,AutoSize,0,AutoSize,0,AutoSize,0" /&gt;&lt;Rows Styles="Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26" /&gt;&lt;/TableLayoutSettings&gt;</value>
+    <value>&lt;?xml version="1.0" encoding="utf-16"?&gt;&lt;TableLayoutSettings&gt;&lt;Controls&gt;&lt;Control Name="lblOnSessionLock" Row="7" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="chkRunAtStartup" Row="0" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="chkShowOptionsOnLaunch" Row="1" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="lblWorkTime" Row="2" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="nudWorkTime" Row="2" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="lblBreakTime" Row="2" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="lnkFont" Row="6" RowSpan="1" Column="1" ColumnSpan="2" /&gt;&lt;Control Name="chkBeepOnBreakEnd" Row="1" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="lblFontLabel" Row="6" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="nudBreakTime" Row="2" RowSpan="1" Column="3" ColumnSpan="1" /&gt;&lt;Control Name="picForeColor" Row="5" RowSpan="1" Column="3" ColumnSpan="1" /&gt;&lt;Control Name="lblBackgroundColor" Row="5" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="lblBreakDelay" Row="3" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="nudOpacity" Row="4" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="lblOpacity" Row="4" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="lblMessage" Row="4" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="nudBreakDelay" Row="3" RowSpan="1" Column="3" ColumnSpan="1" /&gt;&lt;Control Name="chkWarningTime" Row="3" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="nudWarningTime" Row="3" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="txtMessage" Row="4" RowSpan="1" Column="3" ColumnSpan="1" /&gt;&lt;Control Name="picBackColor" Row="5" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="lblForegroundColor" Row="5" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="radOnLockDoNothing" Row="7" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="radOnLockPause" Row="8" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="radOnLockReset" Row="9" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;/Controls&gt;&lt;Columns Styles="AutoSize,0,AutoSize,0,AutoSize,0,AutoSize,0" /&gt;&lt;Rows Styles="Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26" /&gt;&lt;/TableLayoutSettings&gt;</value>
   </data>
   <data name="lnkFont.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Left</value>
