--- a/Breaker/OptionsForm.resx
+++ b/Breaker/OptionsForm.resx
@@ -160,7 +160,7 @@
     <value>Left</value>
   </data>
   <data name="lblBreakTime.Location" type="System.Drawing.Point, System.Drawing">
-    <value>257, 52</value>
+    <value>281, 52</value>
   </data>
   <data name="lblBreakTime.Size" type="System.Drawing.Size, System.Drawing">
     <value>135, 26</value>
@@ -187,7 +187,7 @@
     <value>5</value>
   </data>
   <data name="nudBreakTime.Location" type="System.Drawing.Point, System.Drawing">
-    <value>403, 55</value>
+    <value>427, 55</value>
   </data>
   <data name="nudBreakTime.Size" type="System.Drawing.Size, System.Drawing">
     <value>76, 21</value>
@@ -292,7 +292,7 @@
     <value>Left</value>
   </data>
   <data name="lblMessage.Location" type="System.Drawing.Point, System.Drawing">
-    <value>257, 104</value>
+    <value>281, 104</value>
   </data>
   <data name="lblMessage.Size" type="System.Drawing.Size, System.Drawing">
     <value>56, 26</value>
@@ -322,7 +322,7 @@
     <value>Top, Left, Right</value>
   </data>
   <data name="txtMessage.Location" type="System.Drawing.Point, System.Drawing">
-    <value>403, 107</value>
+    <value>427, 107</value>
   </data>
   <data name="txtMessage.Size" type="System.Drawing.Size, System.Drawing">
     <value>321, 21</value>
@@ -357,6 +357,12 @@
   <data name="mnuOptions.Text" xml:space="preserve">
     <value>Options</value>
   </data>
+  <data name="mnuPause.Size" type="System.Drawing.Size, System.Drawing">
+    <value>140, 22</value>
+  </data>
+  <data name="mnuPause.Text" xml:space="preserve">
+    <value>Pause</value>
+  </data>
   <data name="mnuTakeABreak.Size" type="System.Drawing.Size, System.Drawing">
     <value>140, 22</value>
   </data>
@@ -379,7 +385,7 @@
     <value>Exit</value>
   </data>
   <data name="mnuNotifyIcon.Size" type="System.Drawing.Size, System.Drawing">
-    <value>141, 98</value>
+    <value>141, 120</value>
   </data>
   <data name="&gt;&gt;mnuNotifyIcon.Name" xml:space="preserve">
     <value>mnuNotifyIcon</value>
@@ -2876,7 +2882,7 @@
     <value>20</value>
   </data>
   <data name="picForeColor.Location" type="System.Drawing.Point, System.Drawing">
-    <value>403, 133</value>
+    <value>427, 133</value>
   </data>
   <data name="picForeColor.Size" type="System.Drawing.Size, System.Drawing">
     <value>20, 20</value>
@@ -2900,7 +2906,7 @@
     <value>352, 60</value>
   </metadata>
   <data name="nudBreakDelay.Location" type="System.Drawing.Point, System.Drawing">
-    <value>403, 81</value>
+    <value>427, 81</value>
   </data>
   <data name="nudBreakDelay.Size" type="System.Drawing.Size, System.Drawing">
     <value>76, 21</value>
@@ -2930,7 +2936,7 @@
     <value>Left</value>
   </data>
   <data name="lblBreakDelay.Location" type="System.Drawing.Point, System.Drawing">
-    <value>257, 78</value>
+    <value>281, 78</value>
   </data>
   <data name="lblBreakDelay.Size" type="System.Drawing.Size, System.Drawing">
     <value>140, 26</value>
@@ -2963,7 +2969,7 @@
     <value>Left</value>
   </data>
   <data name="chkBeepOnBreakEnd.Location" type="System.Drawing.Point, System.Drawing">
-    <value>257, 29</value>
+    <value>281, 29</value>
   </data>
   <data name="chkBeepOnBreakEnd.Size" type="System.Drawing.Size, System.Drawing">
     <value>136, 20</value>
@@ -10418,7 +10424,7 @@
     <value>Left</value>
   </data>
   <data name="lblForegroundColor.Location" type="System.Drawing.Point, System.Drawing">
-    <value>257, 130</value>
+    <value>281, 130</value>
   </data>
   <data name="lblForegroundColor.Size" type="System.Drawing.Size, System.Drawing">
     <value>107, 26</value>
@@ -10477,8 +10483,83 @@
   <data name="&gt;&gt;lblFontLabel.ZOrder" xml:space="preserve">
     <value>8</value>
   </data>
-  <data name="lnkFont.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="lnkFont.Location" type="System.Drawing.Point, System.Drawing">
+    <value>175, 156</value>
+  </data>
+  <data name="lnkFont.Size" type="System.Drawing.Size, System.Drawing">
+    <value>100, 23</value>
+  </data>
+  <data name="lnkFont.TabIndex" type="System.Int32, mscorlib">
+    <value>30</value>
+  </data>
+  <data name="&gt;&gt;lnkFont.Name" xml:space="preserve">
+    <value>lnkFont</value>
+  </data>
+  <data name="&gt;&gt;lnkFont.Type" xml:space="preserve">
+    <value>System.Windows.Forms.LinkLabel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;lnkFont.Parent" xml:space="preserve">
+    <value>TableLayoutPanel1</value>
+  </data>
+  <data name="&gt;&gt;lnkFont.ZOrder" xml:space="preserve">
+    <value>6</value>
+  </data>
+  <metadata name="dlgFont.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>477, 60</value>
+  </metadata>
+  <data name="btnExit.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Bottom, Right</value>
+  </data>
+  <data name="btnExit.Location" type="System.Drawing.Point, System.Drawing">
+    <value>502, 564</value>
+  </data>
+  <data name="btnExit.Size" type="System.Drawing.Size, System.Drawing">
+    <value>75, 23</value>
+  </data>
+  <data name="btnExit.TabIndex" type="System.Int32, mscorlib">
+    <value>28</value>
+  </data>
+  <data name="btnExit.Text" xml:space="preserve">
+    <value>Exit</value>
+  </data>
+  <data name="&gt;&gt;btnExit.Name" xml:space="preserve">
+    <value>btnExit</value>
+  </data>
+  <data name="&gt;&gt;btnExit.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;btnExit.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;btnExit.ZOrder" xml:space="preserve">
+    <value>3</value>
+  </data>
+  <data name="btnAbout.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Bottom, Right</value>
+  </data>
+  <data name="btnAbout.Location" type="System.Drawing.Point, System.Drawing">
+    <value>421, 564</value>
+  </data>
+  <data name="btnAbout.Size" type="System.Drawing.Size, System.Drawing">
+    <value>75, 23</value>
+  </data>
+  <data name="btnAbout.TabIndex" type="System.Int32, mscorlib">
+    <value>29</value>
+  </data>
+  <data name="btnAbout.Text" xml:space="preserve">
+    <value>About</value>
+  </data>
+  <data name="&gt;&gt;btnAbout.Name" xml:space="preserve">
+    <value>btnAbout</value>
+  </data>
+  <data name="&gt;&gt;btnAbout.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;btnAbout.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;btnAbout.ZOrder" xml:space="preserve">
+    <value>2</value>
   </data>
   <data name="TableLayoutPanel1.ColumnCount" type="System.Int32, mscorlib">
     <value>4</value>
@@ -10559,7 +10640,7 @@
     <value>NoControl</value>
   </data>
   <data name="radOnLockDoNothing.Location" type="System.Drawing.Point, System.Drawing">
-    <value>257, 185</value>
+    <value>281, 185</value>
   </data>
   <data name="radOnLockDoNothing.Size" type="System.Drawing.Size, System.Drawing">
     <value>88, 17</value>
@@ -10589,7 +10670,7 @@
     <value>NoControl</value>
   </data>
   <data name="radOnLockPause.Location" type="System.Drawing.Point, System.Drawing">
-    <value>257, 211</value>
+    <value>281, 211</value>
   </data>
   <data name="radOnLockPause.Size" type="System.Drawing.Size, System.Drawing">
     <value>118, 17</value>
@@ -10622,7 +10703,7 @@
     <value>True</value>
   </data>
   <data name="radOnLockReset.Location" type="System.Drawing.Point, System.Drawing">
-    <value>257, 237</value>
+    <value>281, 237</value>
   </data>
   <data name="radOnLockReset.Size" type="System.Drawing.Size, System.Drawing">
     <value>116, 17</value>
@@ -10673,94 +10754,7 @@
     <value>1</value>
   </data>
   <data name="TableLayoutPanel1.LayoutSettings" type="System.Windows.Forms.TableLayoutSettings, System.Windows.Forms">
-    <value>&lt;?xml version="1.0" encoding="utf-16"?&gt;&lt;TableLayoutSettings&gt;&lt;Controls&gt;&lt;Control Name="lblOnSessionLock" Row="7" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="chkRunAtStartup" Row="0" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="chkShowOptionsOnLaunch" Row="1" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="lblWorkTime" Row="2" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="nudWorkTime" Row="2" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="lblBreakTime" Row="2" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="lnkFont" Row="6" RowSpan="1" Column="1" ColumnSpan="2" /&gt;&lt;Control Name="chkBeepOnBreakEnd" Row="1" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="lblFontLabel" Row="6" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="nudBreakTime" Row="2" RowSpan="1" Column="3" ColumnSpan="1" /&gt;&lt;Control Name="picForeColor" Row="5" RowSpan="1" Column="3" ColumnSpan="1" /&gt;&lt;Control Name="lblBackgroundColor" Row="5" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="lblBreakDelay" Row="3" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="nudOpacity" Row="4" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="lblOpacity" Row="4" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="lblMessage" Row="4" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="nudBreakDelay" Row="3" RowSpan="1" Column="3" ColumnSpan="1" /&gt;&lt;Control Name="chkWarningTime" Row="3" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="nudWarningTime" Row="3" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="txtMessage" Row="4" RowSpan="1" Column="3" ColumnSpan="1" /&gt;&lt;Control Name="picBackColor" Row="5" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="lblForegroundColor" Row="5" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="radOnLockDoNothing" Row="7" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="radOnLockPause" Row="8" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="radOnLockReset" Row="9" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;/Controls&gt;&lt;Columns Styles="AutoSize,0,AutoSize,0,AutoSize,0,AutoSize,0" /&gt;&lt;Rows Styles="Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26" /&gt;&lt;/TableLayoutSettings&gt;</value>
-  </data>
-  <data name="lnkFont.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Left</value>
-  </data>
-  <data name="lnkFont.Location" type="System.Drawing.Point, System.Drawing">
-    <value>175, 156</value>
-  </data>
-  <data name="lnkFont.Size" type="System.Drawing.Size, System.Drawing">
-    <value>156, 26</value>
-  </data>
-  <data name="lnkFont.TabIndex" type="System.Int32, mscorlib">
-    <value>27</value>
-  </data>
-  <data name="lnkFont.Text" xml:space="preserve">
-    <value>Verdana, 42pt, style=Bold</value>
-  </data>
-  <data name="lnkFont.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
-    <value>MiddleLeft</value>
-  </data>
-  <data name="&gt;&gt;lnkFont.Name" xml:space="preserve">
-    <value>lnkFont</value>
-  </data>
-  <data name="&gt;&gt;lnkFont.Type" xml:space="preserve">
-    <value>System.Windows.Forms.LinkLabel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;lnkFont.Parent" xml:space="preserve">
-    <value>TableLayoutPanel1</value>
-  </data>
-  <data name="&gt;&gt;lnkFont.ZOrder" xml:space="preserve">
-    <value>6</value>
-  </data>
-  <metadata name="dlgFont.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>477, 60</value>
-  </metadata>
-  <data name="btnExit.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Bottom, Right</value>
-  </data>
-  <data name="btnExit.Location" type="System.Drawing.Point, System.Drawing">
-    <value>502, 564</value>
-  </data>
-  <data name="btnExit.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
-  </data>
-  <data name="btnExit.TabIndex" type="System.Int32, mscorlib">
-    <value>28</value>
-  </data>
-  <data name="btnExit.Text" xml:space="preserve">
-    <value>Exit</value>
-  </data>
-  <data name="&gt;&gt;btnExit.Name" xml:space="preserve">
-    <value>btnExit</value>
-  </data>
-  <data name="&gt;&gt;btnExit.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;btnExit.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;btnExit.ZOrder" xml:space="preserve">
-    <value>3</value>
-  </data>
-  <data name="btnAbout.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Bottom, Right</value>
-  </data>
-  <data name="btnAbout.Location" type="System.Drawing.Point, System.Drawing">
-    <value>421, 564</value>
-  </data>
-  <data name="btnAbout.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
-  </data>
-  <data name="btnAbout.TabIndex" type="System.Int32, mscorlib">
-    <value>29</value>
-  </data>
-  <data name="btnAbout.Text" xml:space="preserve">
-    <value>About</value>
-  </data>
-  <data name="&gt;&gt;btnAbout.Name" xml:space="preserve">
-    <value>btnAbout</value>
-  </data>
-  <data name="&gt;&gt;btnAbout.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;btnAbout.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;btnAbout.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>&lt;?xml version="1.0" encoding="utf-16"?&gt;&lt;TableLayoutSettings&gt;&lt;Controls&gt;&lt;Control Name="lblOnSessionLock" Row="7" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="chkRunAtStartup" Row="0" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="chkShowOptionsOnLaunch" Row="1" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="lblWorkTime" Row="2" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="nudWorkTime" Row="2" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="lblBreakTime" Row="2" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="lnkFont" Row="6" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="chkBeepOnBreakEnd" Row="1" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="lblFontLabel" Row="6" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="nudBreakTime" Row="2" RowSpan="1" Column="3" ColumnSpan="1" /&gt;&lt;Control Name="picForeColor" Row="5" RowSpan="1" Column="3" ColumnSpan="1" /&gt;&lt;Control Name="lblBackgroundColor" Row="5" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="lblBreakDelay" Row="3" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="nudOpacity" Row="4" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="lblOpacity" Row="4" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="lblMessage" Row="4" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="nudBreakDelay" Row="3" RowSpan="1" Column="3" ColumnSpan="1" /&gt;&lt;Control Name="chkWarningTime" Row="3" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="nudWarningTime" Row="3" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="txtMessage" Row="4" RowSpan="1" Column="3" ColumnSpan="1" /&gt;&lt;Control Name="picBackColor" Row="5" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="lblForegroundColor" Row="5" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="radOnLockDoNothing" Row="7" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="radOnLockPause" Row="8" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;Control Name="radOnLockReset" Row="9" RowSpan="1" Column="2" ColumnSpan="1" /&gt;&lt;/Controls&gt;&lt;Columns Styles="AutoSize,0,AutoSize,0,AutoSize,0,AutoSize,0" /&gt;&lt;Rows Styles="Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26,Absolute,26" /&gt;&lt;/TableLayoutSettings&gt;</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -13131,6 +13125,12 @@
     <value>mnuOptions</value>
   </data>
   <data name="&gt;&gt;mnuOptions.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;mnuPause.Name" xml:space="preserve">
+    <value>mnuPause</value>
+  </data>
+  <data name="&gt;&gt;mnuPause.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;mnuTakeABreak.Name" xml:space="preserve">
